--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
         --default-artifact-root file:///mlflow/artifacts
         --host 0.0.0.0
         --port 5000
+        --allowed-hosts mlflow,mlflow:5000,localhost,127.0.0.1
+        --cors-allowed-origins http://localhost,http://127.0.0.1,http://mlflow:5000
     # SQLite DB for experiments (host folder)
     # Storage for models/artifacts (host folder)
     # Accept connections from any container/host
@@ -19,8 +21,6 @@ services:
       - "5000:5000"                            # Map MLflow port
     environment:
       - MLFLOW_ARTIFACT_ROOT=/mlflow/artifacts # Ensure MLflow can write to artifact folder
-      - MLFLOW_ENABLE_CORS=true
-      - MLFLOW_CORS_ORIGINS=*                  # Allow cross-origin requests from all origins
     restart: always
 
   # ----------------- Streamlit App -----------------
